--- a/cabal.project
+++ b/cabal.project
@@ -11,4 +11,4 @@ package pandoc-citeproc
 source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
-    tag: 860788f105cc9b3fec2ab062d993b7aebd68c9c0
+    tag: 0.16.3
