--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -181,7 +181,7 @@ data-files:
 extra-source-files:
                  -- documentation
                  INSTALL.md, AUTHORS.md, README.md,
-                 CONTRIBUTING.md, BUGS, changelog,
+                 CONTRIBUTING.md, BUGS, changelog.md,
                  man/pandoc.1
                  -- cabal and stack build plans
                  cabal.project
