--- a/cabal.project
+++ b/cabal.project
@@ -12,3 +12,8 @@ source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
     tag: 0.16.3
+
+source-repository-package
+    type: git
+    location: https://github.com/lierdakil/regex-pcre-builtin
+    tag: v0.95.0.0-beta4
