--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
           sudo apt-get install ghc-${{ matrix.versions.ghc }} cabal-install-${{ matrix.versions.cabal }}
     - name: Install dependencies
       run: |
-          export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
+          export PATH=/opt/cabal/${{ matrix.versions.cabal }}/bin:/opt/ghc/${{ matrix.versions.ghc }}/bin:$PATH
           cabal v2-update
           cabal v2-build --dependencies-only --enable-tests --disable-optimization
     - name: Build and test
@@ -70,7 +70,7 @@ jobs:
           export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
           cabal v2-build --enable-tests --disable-optimization 2>&1 | tee build.log
           # fail if warnings in local build
-          ! grep -q "[Ww]arning:" build.log
+          ! grep -q ": *[Ww]arning:" build.log
           cabal v2-test --disable-optimization
 
   windows:
