--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
           export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
           cabal v2-build --enable-tests --disable-optimization 2>&1 | tee build.log
           # fail if warnings in local build
-          ! grep -q ": *[Ww]arning:" build.log
+          ! grep -q ": *[Ww]arning:" build.log || exit 1
           cabal v2-test --disable-optimization
 
   windows:
