--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ extra-deps:
 - pandoc-citeproc-0.16.3
 - pandoc-types-1.17.6.1
 - texmath-0.11.3
+- haddock-library-1.8.0
 - skylighting-0.8.2.3
 - skylighting-core-0.8.2.3
 - regex-pcre-builtin-0.95.0.8.8.35
