--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -22,22 +22,33 @@ jobs:
   windows:
 
     runs-on: windows-latest
+    strategy:
+      fail-fast: true
+      matrix:
+      - osarch: "windows-x86_64"
+        arch: "x86"
+        choco_opts: "--x86"
+        stack_opts: ""
+      - osarch: "windows-i386"
+        arch: "x64"
+        choco_opts: ""
+        stack_opts: "--flag hslua:lua_32bits"
 
     steps:
     - uses: actions/checkout@v1
     - name: Install stack
       shell: cmd
       run: |
-          choco install haskell-stack
+          choco install haskell-stack ${{ matrix.choco_opts }}
     - name: Install dependencies
       run: |
           stack update
-          stack build --dependencies-only pandoc pandoc-citeproc
+          stack build ${{ matrix.stack_opts }} --dependencies-only pandoc pandoc-citeproc
     - name: Build artifacts
       shell: cmd
       run: |
           for /f %%a in ('powershell -Command "Get-Date -format yyyy-MM-dd"') do set THEDATE=%%a
-          stack build pandoc pandoc-citeproc
+          stack build  ${{ matrix.stack_opts }}pandoc pandoc-citeproc
           forfiles /P .\.stack-work\install /M pandoc*.exe /S /C "cmd /C copy @path windows"
           stack exec pandoc -- -s --toc MANUAL.txt -o windows\MANUAL.html
           stack exec pandoc -- -s COPYING.md -t rtf -o windows\COPYING.rtf
@@ -54,12 +65,12 @@ jobs:
           )
           echo Detected version %VERSION%
           echo Creating msi...
-          candle -dVERSION=%VERSION% -dBINPATH=%BINPATH% *.wxs -out wixobj\
+          candle -arch ${{ matrix.arch }} -dVERSION=%VERSION% -dBINPATH=%BINPATH% *.wxs -out wixobj\
           if %errorlevel% neq 0 exit /b %errorlevel%
-          light  -sw1076 -ext WixUIExtension -ext WixUtilExtension -cultures:en-us -loc Pandoc-en-us.wxl -out pandoc-%VERSION%-windows.msi wixobj\*.wixobj
+          light  -sw1076 -ext WixUIExtension -ext WixUtilExtension -cultures:en-us -loc Pandoc-en-us.wxl -out pandoc-%VERSION%-${{ matrix.osarch }}.msi wixobj\*.wixobj
           cd ..
           mkdir windows-release-candidate
-          copy windows\pandoc-%VERSION%-windows.msi windows-release-candidate
+          copy windows\pandoc-%VERSION%-${{ matrix.osarch }}.msi windows-release-candidate
     - uses: actions/upload-artifact@master
       with:
         name: windows-release-candidate
