Remove derive_json_via_th flag; always use TH.
This cuts down on code duplication and reduces the chance
for errors.  See #4083.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -359,11 +359,6 @@ flag embed_data_files
   Description:   Embed data files in binary for relocatable executable.
   Default:       False
 
-flag derive_json_via_th
-  Description:   Use Template Haskell instead of GHC Generics to derive ToJSON
-                 and FromJSON instances.
-  Default:       False
-
 flag trypandoc
   Description:   Build trypandoc cgi executable.
   Default:       False
@@ -441,9 +436,6 @@ library
      cpp-options:   -DEMBED_DATA_FILES
      build-depends: file-embed >= 0.0 && < 0.1
      other-modules: Text.Pandoc.Data
-  if flag(derive_json_via_th)
-     cpp-options:   -DDERIVE_JSON_VIA_TH
-     other-extensions: TemplateHaskell
   if os(windows)
     cpp-options:      -D_WINDOWS
   ghc-options:     -Wall -fno-warn-unused-do-bind
@@ -462,7 +454,7 @@ library
                      -fhide-source-paths
 
   default-language: Haskell2010
-  other-extensions: NoImplicitPrelude
+  other-extensions: NoImplicitPrelude, TemplateHaskell
   hs-source-dirs:  src
 
   exposed-modules: Text.Pandoc,
