--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -596,6 +596,7 @@ library
                    Text.Pandoc.Lua.Marshaling.CommonState,
                    Text.Pandoc.Lua.Marshaling.MediaBag,
                    Text.Pandoc.Lua.Marshaling.ReaderOptions,
+                   Text.Pandoc.Lua.Marshaling.Context,
                    Text.Pandoc.Lua.Marshaling.Version,
                    Text.Pandoc.Lua.Module.MediaBag,
                    Text.Pandoc.Lua.Module.Pandoc,
@@ -724,6 +725,7 @@ test-suite test-pandoc
                   executable-path >= 0.0 && < 0.1,
                   zip-archive >= 0.2.3.4 && < 0.5,
                   xml >= 1.3.12 && < 1.4,
+                  doctemplates >= 0.6.1 && < 0.7,
                   Glob >= 0.7 && < 0.11
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
