--- a/test/command/5700-metadata-file-2.yml
+++ b/test/command/5700-metadata-file-2.yml
@@ -1,2 +1,2 @@
-title: This title should be overridden by 5700-metadta-file-2.yml
+title: Multiple metadata files test
 desc: Both of these files should be loaded.
